StepOneJobSeekerSignUp first commit

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,38 +1,26 @@
-.App {
-  text-align: center;
+.signUpBG {
+  background-color: #c8c8c8;
+  height: 100vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.signUpBG > h1 {
+  font-family: 'Source Sans Pro', sans-serif;
+  color: white;
+  padding-top: 100px;
+  font-weight: bold;
+  text-shadow: 2px 2px 8px #2e2c2c;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.whiteBG {
+  position: relative;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-color: white;
+  border-radius: 5px;
+  width: 40%;
+  height: 50%;
+  
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
