added work2, removed education add button, added cancel buttons for work

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -30,5 +30,13 @@ body{
   top: 4em;
 }
 
+.AddWorkExperience{
+  border: 1px solid lightblue;
+  padding-top: 5px;
+  padding-left: 15px;
+  padding-right: 15px;
+  border-radius: 3px;
+}
+
 
 
