--- a/frontend/src/components/jobSeekerSignup/JobSeekerSignup.css
+++ b/frontend/src/components/jobSeekerSignup/JobSeekerSignup.css
@@ -1,7 +1,7 @@
 .signUpBG {
   height: 100vh;
   overflow-y: scroll;
-  background-image: url(./job-seek.jpg);
+  background-image: url(https://images.unsplash.com/photo-1522202176988-66273c2fd55f?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1471&q=80);
   background-size: 100%;
   background-repeat: no-repeat;
   background-attachment: fixed;
