--- a/frontend/src/components/jobSeekerLogin/JobSeekerLogin.css
+++ b/frontend/src/components/jobSeekerLogin/JobSeekerLogin.css
@@ -3,14 +3,29 @@
 }
 
 .login-button {
-    padding: 10px;
-    padding-left: 60px;
-    padding-right:60px;
-    background: linear-gradient(180deg, #3A8DBB 0%, #42B096 100%);
-    border-radius: 20px;
+    height: 44px;
+    width: 441px;
+    left: 0px;
+    top: 0px;
+    border-radius: 5px;
+    background: #4682B4;
+    border-radius: 5px;
     border-color: transparent;
 }
 
+.login-button:focus, .login-button:hover{
+    border-color: transparent;
+    background: #4682B4;
+
+}
+.login-input-field{
+    height: 43.488372802734375px;
+    width: 445px;
+    left: 0px;
+    top: 26.093017578125px;
+    border-radius: 5px;
+
+}
 a {
     text-decoration: none;
     color: #055C9D;
@@ -21,6 +36,7 @@ a {
 }
 
 .jobSeeker-loginPic {
-    padding-top: 5em;
-    padding-left: 2em;
+    height: 100vh;
+    background-image: url('../../images/jobSeekerlogin.svg');
+    background-repeat: no-repeat;
 }
