--- a/frontend/src/components/jobSeekerSignup/JobSeekerSignup.css
+++ b/frontend/src/components/jobSeekerSignup/JobSeekerSignup.css
@@ -1,17 +1,18 @@
 .signUpBG {
   height: 100vh;
-  overflow-y: auto;
-  background-image: url(https://images.unsplash.com/photo-1522202176988-66273c2fd55f?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1471&q=80);
-  background-size: 100%;
+  background-size:100%;
+  background-position: center;
+  background-image: url("../../images/jobSeekerSignUp.svg");
   background-repeat: no-repeat;
   background-attachment: fixed;
   }
   
   .signUpBG > h1 {
     font-family: 'Roboto', 'sans-serif';
-    color: white;
-    font-size:3.25em;
-    padding-top: 100px;
+    color: black;
+    font-weight: bold;
+    font-size: 30px;
+    padding-top: 65px;
   }
   
   .whiteBG {
@@ -19,10 +20,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background: rgba(194, 202, 209, 0.926);;
+    background: #e6e6e6fa;
     border-radius: 25px;
-    width: 500px;
-    height: 350px;
+    width: 650px;
+    height: 375px;
     overflow-x: hidden;
     overflow-y: auto;
   }
@@ -46,7 +47,7 @@
   }
   .input-form{
     position: absolute;
-    top: 4em;
+    top: 30px;
   }
   
   .AddWorkExperience{
@@ -58,14 +59,17 @@
   }
   
   .signup-button{
-    padding: 10px;
-    padding-left: 60px;
-    padding-right:60px;
-    background: linear-gradient(180deg, #3A8DBB 0%, #42B096 100%);
-    border-radius: 20px;
+    height: 57px;
+    width: 224px;
+    left: 469px;
+    top: 484px;
+    border-radius: 9px;
+    background: #4682B4;
     border-color: transparent;
   }
   .signup-button:focus, .signup-button:hover{
     border-color: transparent;
+    background: #4682B4;
+
   }
   
