--- a/frontend/src/components/jobSeekerLogin/JobSeekerLogin.css
+++ b/frontend/src/components/jobSeekerLogin/JobSeekerLogin.css
@@ -1,38 +1,45 @@
 .login-button {
-    height: 44px;
-    width: 441px;
-    left: 0px;
-    top: 0px;
-    border-radius: 5px;
-    background: #4682B4;
-    border-radius: 5px;
-    border-color: transparent;
+height: 44px;
+width: 441px;
+left: 0px;
+top: 0px;
+border-radius: 5px;
+background: #4682B4;
+border-radius: 5px;
+border-color: transparent;
 }
 
-.login-button:focus, .login-button:hover{
-    border-color: transparent;
-    background: #4682B4;
-
+.login-button:hover {
+border-color: transparent;
+background: #4682B4;
 }
+
+.login-button:active:focus, .login-button:focus{
+box-shadow:#4683b469 0px 0px 0px 3.23261px;
+border-color: transparent;
+background: #4682B4;
+}
+
+
 .login-input-field{
-    height: 43.488372802734375px;
-    width: 445px;
-    left: 0px;
-    top: 26.093017578125px;
-    border-radius: 5px;
+height: 43.488372802734375px;
+width: 445px;
+left: 0px;
+top: 26.093017578125px;
+border-radius: 5px;
 
 }
 a {
-    text-decoration: none;
-    color: #055C9D;
+text-decoration: none;
+color: #055C9D;
 }
 
 .forgotPw {
-    font-size: 15px;
+font-size: 15px;
 }
 
 .jobSeeker-loginPic {
-    height: 75vh;
-    background-image: url('../../images/jobSeekerlogin.svg');
-    background-repeat: no-repeat;
+height: 75vh;
+background-image: url('../../images/jobSeekerlogin.svg');
+background-repeat: no-repeat;
 }
