--- a/frontend/src/components/jobSeekerSignup/JobSeekerSignup.css
+++ b/frontend/src/components/jobSeekerSignup/JobSeekerSignup.css
@@ -1,55 +1,58 @@
-  .side-image{
-    height: calc(100vh - 56px);
-    background: linear-gradient(344deg, rgba(83,101,253,1) 0%, rgba(70,180,158,1) 100%);
-  }
-  .signup-bg-img{
-    background-size: 50%;
-    background-position: center;
-    height: 50vh;
-    margin-top:60px;
-    background-repeat: no-repeat;
+.side-image{
+  height: calc(100vh - 56px);
+  background: linear-gradient(344deg, rgba(83,101,253,1) 0%, rgba(70,180,158,1) 100%);
+}
+.signup-bg-img{
+  background-size: 50%;
+  background-position: center;
+  height: 50vh;
+  margin-top:60px;
+  background-repeat: no-repeat;
 
-    background-image: url('../../images/jobSeekerSignUp.svg');
-  }
-  .signUpBG > h1 {
-    font-family: 'Roboto', 'sans-serif';
-    color: black;
-    font-weight: bold;
-    font-size: 30px;
-    padding-top: 45px;
+  background-image: url('../../images/jobSeekerSignUp.svg');
+}
+.signUpBG > h1 {
+  font-family: 'Roboto', 'sans-serif';
+  color: black;
+  font-weight: bold;
+  font-size: 30px;
+  padding-top: 45px;
 
-  }
-  
-  .signup-input-field{
-    height: 35px;
-    border-radius: 5px;
-    font-size: 15px;
-  }
-  .input-form{
-    width:100%;
-    top: 30px;
-  }
-  
-  .AddWorkExperience{
-    border: 2px solid rgb(255, 255, 255);
-    padding-top: 5px;
-    padding-left: 15px;
-    padding-right: 15px;
-    border-radius: 15px;
-  }
-  
-  .signup-button{
-    height: 57px;
-    width: 224px;
-    left: 469px;
-    top: 484px;
-    border-radius: 9px;
-    background: #4682B4;
-    border-color: transparent;
-  }
-  .signup-button:focus, .signup-button:hover{
-    border-color: transparent;
-    background: #4682B4;
+}
 
-  }
-  
+.signup-input-field{
+  height: 35px;
+  border-radius: 5px;
+  font-size: 15px;
+}
+.input-form{
+  width:100%;
+  top: 30px;
+}
+
+.AddWorkExperience{
+  border: 2px solid rgb(255, 255, 255);
+  padding-top: 5px;
+  padding-left: 15px;
+  padding-right: 15px;
+  border-radius: 15px;
+}
+
+.signup-button{
+  height: 57px;
+  width: 224px;
+  left: 469px;
+  top: 484px;
+  border-radius: 9px;
+  background: #4682B4;
+  border-color: transparent;
+}
+.signup-button:hover {
+  border-color: transparent;
+  background: #4682B4;
+}
+.signup-button:active:focus, .signup-button:focus{
+  box-shadow:#4683b469 0px 0px 0px 3.23261px;
+  border-color: transparent;
+  background: #4682B4;
+}
