--- a/frontend/src/components/jobSeekerDashboard/JobSeekerDashboard.css
+++ b/frontend/src/components/jobSeekerDashboard/JobSeekerDashboard.css
@@ -23,4 +23,10 @@
 .job-title {
   font-family: "Roboto", "sans-serif";
   font-weight: bold;
+  font-size: 35px;
+}
+
+.logo {
+  width: 90px;
+  height: 80px;
 }
