--- a/frontend/src/components/recruiterAddJob/RecruiterAddJob.css
+++ b/frontend/src/components/recruiterAddJob/RecruiterAddJob.css
@@ -11,13 +11,34 @@
     border-color: transparent;
     background: #4682B4;
 }
-.post-job-button:active:focus, .signup-button:focus{
+.post-job-button:active:focus, .post-job-button:focus{
     box-shadow:#4683b469 0px 0px 0px 3.23261px;
     border-color: transparent;
     background: #4682B4;
 }
 
+.form-link{
+    color: #4682B4;
+}
 .form-link:hover{
     cursor: pointer;
-    color: #7cafd8;
+    color: #8bacc7;
+}
+#job-description, #requirements, #benefits{
+    min-height: 150px;
+}
+.clear-button{
+    padding:5px;
+    background:grey;
+    border: none;
+    font-size: 10px;
+}
+.clear-button:hover{
+    border-color:transparent;
+    background: grey;
+}
+.clear-button:active:focus, .clear-button:focus{
+    box-shadow:#c2c2c269 0px 0px 0px 3.23261px;
+    border-color: transparent;
+    background: grey;
 }
