small styling changes

--- a/frontend/src/components/recruiterDashboard/RecruiterDashboard.css
+++ b/frontend/src/components/recruiterDashboard/RecruiterDashboard.css
@@ -1,5 +1,7 @@
 .side-bar{
     height: calc(100vh - 56px);
+    background: rgb(248,248,248);
+    background: linear-gradient(0deg, rgba(248,248,248,1) 0%, rgba(227,237,255,1) 100%);
 }
 
 #addJob{
