--- a/frontend/src/components/recruiterDashboard/RecruiterDashboard.css
+++ b/frontend/src/components/recruiterDashboard/RecruiterDashboard.css
@@ -9,10 +9,10 @@
     background-color: #212529;
     color: white;
     border-radius: 10px;
-    
     width: 150px;
 }
 
 #addJob:hover{
     background-color: #2a2e33;
+    cursor: pointer;
 }
