--- a/frontend/src/components/recruiterDashboard/RecruiterDashboard.css
+++ b/frontend/src/components/recruiterDashboard/RecruiterDashboard.css
@@ -16,3 +16,22 @@
     background-color: #2a2e33;
     cursor: pointer;
 }
+
+.heading-text{
+    font-weight: bold;
+    font-size: 18px;  
+}
+
+.contact-button{
+    background: #4682B4;
+    border-color: transparent;
+}
+.contact-button:hover {
+    border-color: transparent;
+    background: #4682B4;
+}
+.contact-button:active:focus, .contact-button:focus{
+    box-shadow:#4683b469 0px 0px 0px 3.23261px;
+    border-color: transparent;
+    background: #4682B4;
+}
