--- a/frontend/src/components/about/About.css
+++ b/frontend/src/components/about/About.css
@@ -18,6 +18,12 @@
   }
 }
 
+@media screen and (min-width: 768px) {
+  .description {
+    margin-top: -25em;
+  }
+}
+
 .para {
   font-size: 22px;
 }
